# rock-paper-scissors

./: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  quasar.config.js  vite.config.ts
.github/workflows/: deploy-vue.yml
app/: package.json
app/src/: axios.ts  crypto.ts  game.ts  main.ts  ws.js
app/src/components/: PlayGame.vue
app/src/pages/: IndexPage.vue  LoginPage.vue
assets/: index-D0TbJB5F.css  index-gz86zi2d.css
logic/leaderboard/: Cargo.toml  build.sh
logic/leaderboard/res/: leaderboard.wasm
logic/rock-paper-scissors/: Cargo.toml  build.sh
logic/rock-paper-scissors/res/: rock_paper_scissors.wasm
logic/rock-paper-scissors/src/: choice.rs  key.rs  lib.rs
src/: App.vue  auth.ts  game.js  game.ts  ws.js
src/boot/: axios.js
src/components/: EssentialLink.vue  LeaderBoard.vue  NearLogin.vue  PlayGame.vue
src/layouts/: MainLayout.vue
src/pages/: IndexPage.vue  LoginPage.vue
src/router/: index.ts
