[package]
name = "leaderboard"
description = "leaderboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.5.0"

[dev-dependencies]
near-sdk = { version = "5.5.0", features = ["unit-testing"] }
tokio = "1.35.1"
near-workspaces = "0.15.0"
serde_json = "1.0.113"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true